Use proper method for CardSet